Update Development.md to use AminoRun and remove irrelevant stuff. (#712)